# dftio

./: LICENSE  README.md  pyproject.toml
dftio/: __init__.py  __main__.py  constants.py  utils.py
dftio/calc/: ldos.py
dftio/datastruct/: __init__.py  atomicbasis.py  field.py  neighbourlist.py
dftio/dep/_xitorch/_core/: editable_module.py  pure_function.py
dftio/dep/_xitorch/_impls/integrate/: samples_quad.py
dftio/dep/_xitorch/_impls/interpolate/: interp_1d.py
dftio/dep/_xitorch/_utils/: assertfuncs.py  unique.py
dftio/dep/_xitorch/interpolate/: __init__.py  interp1.py
dftio/io/: __init__.py  parse.py
dftio/io/abacus/: abacus_parser.py
dftio/io/gaussian/: gaussian_conventionns.py  gaussian_parser.py  gaussian_tools.py
dftio/io/rescu/: rescu_parser.py
dftio/io/siesta/: check_siesta.ipynb  siesta_parser.py  try_siesta.ipynb
dftio/op/: __init__.py  grid_int.py  make_grid.py
example/: dftio_demo.ipynb
example/data/: Si_gga_6au_100Ry_1s1p.orb
test/data/gaussian/: test_gau.py
test/data/rescu_calc/: al_lcao_scf.mat
test/data/rescu_calc/scf/: al_lcao_scf.input  resculog.out
test/data/rescu_calc/scf/results/: Density.txt  Potential_vdh.txt  Potential_vna.txt  Potential_vxc.txt  al_lcao_scf.h5  al_lcao_scf.mat
